Closed Bug 437418 Opened 17 years ago Closed 17 years ago

libical shouldn't add extra linefeed after inner components of VTIMEZONE.

Categories

(Calendar :: Internal Components, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dbo, Assigned: ssitter)

References

()

Details

Attachments

(1 file)

libical seems to put an empty line after the inner components of the VTIMEZONE when serializing the vzic'ed VTIMEZONEs to ical. This confuses looking at the timezones.sqlite dump-diff.
Works for me using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.15pre) Gecko/2008060418 Calendar/0.9pre. Confirmed using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008060418 Calendar/0.6a1. -> Trunk only. IMHO Bug 394902 should be fixed to get identical behavior on Trunk and 1.8 Branch back. (For example the timezones definitions look different on Trunk and 1.8 Branch, i.e. "RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10" vs. "RRULE:FREQ=YEARLY;INTERVAL=1;BYDAY=-1SU;BYMONTH=10" for Europe/Berlin.
Version: unspecified → Trunk
I'm seeing what is almost certainly the same thing, not limited to VTIMEZONES.As reported in bug 457466 (which I'm going to dupe against this one) the blank lines are after any line beginning with "END:", whether it's the end of DAYLIGHT, STANDARD, VTIMEZONE, VEVENT, or VCALENDAR.
Handling of "END:" in mozilla1.8 branch is OK: http://mxr.mozilla.org/mozilla1.8/source/calendar/libical/src/libical/icalcomponent.c#353 Handling of "END:" in comm-central is not OK: http://mxr.mozilla.org/comm-central/source/calendar/libical/src/libical/icalcomponent.c#366 As you can see the newline is added twice. libical-0.33 release contains the same error but in trunk it was fixed 4 days ago: http://freeassociation.svn.sourceforge.net/viewvc/freeassociation/trunk/libical/src/libical/icalcomponent.c?r1=851&r2=862
Assignee: nobody → ssitter
Status: NEW → ASSIGNED
Attachment #340785 - Flags: review?(daniel.boelzle)
Comment on attachment 340785 [details] [diff] [review] don't add extra linefeed The patch looks good; r=dbo. AFAIK libical 0.34 is about to be released; maybe someone has cycles to update our code base to it (bug 394902). This would make this change obsolete.
Attachment #340785 - Flags: review?(daniel.boelzle) → review+
Keywords: checkin-needed
Pushed to comm-central <http://hg.mozilla.org/comm-central/rev/ddaeff038eff> -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → 1.0
Target Milestone: 1.0 → 1.0b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: