Fix bug 437418 - libical shouldn't add extra linefeed after inner components of VTIMEZONE. r=dbo